# villager

./: .gitignore  .localis.conf  CHANGELOG.md  MANIFEST.in  README.md  api.yaml  pyproject.toml  pytest.ini  release.ps1  setup.cfg  workspace.lnk
.github/workflows/: cities_release.yaml  release.yaml  test.yaml  update_assets.py
data/: ingest.py  utils.py
data/cities/: __main__.py  filter_cities.py  parse_to_tsv.py
data/cities/scripts/: dump.py  load.py  utils.py
data/countries/: __main__.py  countries.tsv  parse_to_tsv.py
data/countries/scripts/: dump.py  load.py  merge.py  utils.py
data/countries/source_data/: geonames_countries.txt  iso_countries.csv  merge_iso_pycountry.py  wiki_countries.json
data/countries/src/: wiki_countries.json
data/subdivisions/: __main__.py  admin1.txt  aggregate.py  iso-3166-2.csv  iso-3166-2.json  parse_to_tsv.py  patch_01.py  subdivision_dto.py  subdivisions.tsv  utils.py
scripts/: admin1.txt  admin2.txt  countriestxt  f.py  generate_literals.py  parse.py  parser.py  sandbox.py  subdivisions-old.json  subdivisions.json  subdivisions_raw.json  subs_by_country.json  unmatched.json
src/localis/: __init__.py  cli.py  dtos.py  utils.py
src/localis/data/: city.py  (+8 more)
src/villager/: __init__.py  cli.py  dtos.py  literals.py  loader.py  trie.py  types.py  utils.py
tests/: __init__.py  benchmarks.py  cities.py  conftest.py  countries.py  sandbox.py  search_benchmarks.json  test.py  test_cities.py  test_city_registry.py  test_countries.py  test_country_registry.py  test_localities.py  test_model.py  test_registries.py  test_registry.py  test_subdivision_registry.py  test_subdivisions.py  utils.py
tests/analysis/: benchmarks.py  search_benchmarks.json
tests/integration/: test_cli.py
tests/unit/: cities.py  dep_cities.py  dep_countries.py  dep_subdivisions.py  test_cities.py  test_countries.py  test_db.py  test_filter.py  test_get.py  test_lookup.py  test_model.py  test_registry.py  test_search.py  test_subdivisions.py
(+81 files in other folders)
