[tool.poetry]
name = "localis"
version = "0.2.0"
description = "Fast, offline access to comprehensive geographic data for countries, subdivisions, and cities. Built on ISO 3166 and GeoNames datasets with support for exact lookups, filtering, and fuzzy search."
authors = ["danimal"]
readme = "README.md"
packages = [
  { include = "localis", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
rapidfuzz = "^3.13.0"
typer = "^0.20.0"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-watch = "^4.2.0"
unidecode = "^1.4.0"

[tool.poetry.scripts]
localis = 'localis.cli:app'